@@ -337,9 +337,9 @@ uninstparam   = /S
 category      = Entertainment
 describe      = Media Player
 website       = http://www.songbirdnest.com/
-scrape        = http://download.songbirdnest.com/installer/win32/
-version       = Songbird_([0-9]_[0-9])_i686.exe
-filename      = Songbird_#VERSION#_i686.exe
+scrape        = http://download.songbirdnest.com/installer/windows/i686/
+version       = Songbird_([0-9]_[0-9][_0-9]*)_windows-i686.exe
+filename      = Songbird_#VERSION#_windows-i686.exe
 instparam     = /S
 upgrades      = false
 chinstdir     = /D=#INSTALL_DIR#
